Adição da main Experiência + Certificados na Sobre (parcial)
- Fiz o molde dos cards referente a Experiência e Certificados.

Obs 1: Ainda precisa adicionar o gap entre os cards dos respectivos grupos;
Obs 2:  Precisa fazer com que a linha vertical tenha o height dinâmico com o seguinte cálculo: .cardCertificados + 25px

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-        <!-- Section sobre + Tecnologias e Ferramentas -->
+        <!-- Section Sobre + Tecnologias e Ferramentas -->
         <section id="SobreTec">
             <!-- Sobre Mim-->
             <div id="sobreMim">
@@ -81,6 +81,68 @@
                         <span>GitHub</span>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Linha divisória -->
+        <div id="mainLinhaDivisoria"></div>
+
+        <!-- Section Experiência + Certificados -->
+        <section id="ExperienciaCertificados">
+
+            <!-- Experiência -->
+            <div id="Experiencia">
+                <h1>Experiência</h1>
+
+                <!-- Cards da experiência -->
+                <section>
+                    <!-- Card experiência - Container Freelancer -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Desenvolvedor Web Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Freelancer</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Novembro de 2023 - Atualmente</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>Depois que a PD-Tech acabou, comecei a fazer trabalho freelancers. Fiz uma parceira com a professora que participou da fundação da PD-Tech e com isso ela me mandava alguns clientes da empresa dela que necessitavam de um site para o empreendimento deles. Estou nessa enquanto procuro uma vaga de Dev Jr.</p>
+                    </div>
+                </section>
+            </div>
+
+            <!-- Certificados -->
+            <div id="certificados">
+                <h1>Certificados e Formação Acadêmica</h1>
+
+                <!-- Cards dos Certificados e Formações -->
+                <section>
+                    <!-- Formação - ADS -->
+                    <!-- Container com o icon e linha vertical + card -->
+                    <div class="ContainerIcon-e-card">
+                        <!-- Card Certificados - Ícon + Linha vertical-->
+                        <div class="icon_LinhaVertical">
+                            <!-- Card Certificados - Icon -->
+                            <i class="bi bi-mortarboard icon-certificado"></i>
+                            <!-- Linha vertical -->
+                            <div class="linhaVertical"></div>
+                        </div>
+
+                        <!-- Card Certificados - Container ADS -->
+                        <div class="card cardCertificados">
+                            <!-- Card Certificados - Título -->
+                            <h2>Tecnólogo em Análise e Desenvolvimento de Sistemas</h2>
+                            
+                            <!-- Card Certificados - Local -->
+                            <h3>UNIBRA - Centro Universitário Brasileiro</h3>
+
+                            <!-- Card Certificados - Período -->
+                            <h4>UNIBRA - Centro Universitário Brasileiro</h4>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
     </main>
