Adição da main Experiência + Certificados na Sobre (parcial) pt 2
- Adição de todos os cards de Experiência;
- Também foi feito o que estava escrito nas duas Obs no comentário do commit anterior.

Obs: Falta adicionar os cards de Certificados.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
     <script src="../js/header.js" defer></script>
+    <script src="../js/sobre.js" defer></script>
 </head>
 <body>
     <header>
@@ -89,7 +90,6 @@
 
         <!-- Section Experiência + Certificados -->
         <section id="ExperienciaCertificados">
-
             <!-- Experiência -->
             <div id="Experiencia">
                 <h1>Experiência</h1>
@@ -110,6 +110,96 @@
                         <!-- Card experiência - Texto -->
                         <p>Depois que a PD-Tech acabou, comecei a fazer trabalho freelancers. Fiz uma parceira com a professora que participou da fundação da PD-Tech e com isso ela me mandava alguns clientes da empresa dela que necessitavam de um site para o empreendimento deles. Estou nessa enquanto procuro uma vaga de Dev Jr.</p>
                     </div>
+
+                    <!-- Card experiência - Container Inter Período 5 -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Desenvolvedor Web Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Unibra</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Agosto de 2024 - Outubro de 2024</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>Em meu 5° período faculdade (e último semestre) tive o meu último projeto do interdisciplinar para fazer e desta vez fomos em busca de uma ONG e criamos um site que resolvesse os problemas que nos foi passado pelos donos própria ONG. Eu fui um dos responsáveis em criar o protótipo e desenvolver a parte visual do site.</p>
+                    </div>
+
+                    <!-- Card experiência - Container Inter Período 4 -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Desenvolvedor Mobile Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Unibra</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Março de 2024 - Maio de 2024</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>No meu 4° período faculdade, para o projeto do interdisciplinar, criamos um app mobile. Fui um dos responsáveis em criar o protótipo e desenvolver a parte visual do app. Aqui foi onde eu tive meu primeiro contato com o desenvolvimento mobile, área essa que sempre tive curiosidade em vivenciar e produzir algum projeto.</p>
+                    </div>
+
+                    <!-- Card experiência - Container Projeto Startup -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Eng de Requisitos e Desenvolvedor Web Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Unibra</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Agosto de 2023 - Novembro de 2023</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>No meu 6° período da faculdade, tive um projeto de startup para fazer junto com 5 colegas de classe e fui um dos responsáveis pela documentação e pelo front-end (protótipo + código). Tratava-se de um site que possui 2 diferentes usuários (usuário dono de ONG e usuário que deseja se voluntariar em alguma ONG).</p>
+                    </div>
+
+                    <!-- Card experiência - Container PD-Tech -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Desenvolvedor Web Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>PD-Tech</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Maio de 2023 - Outubro de 2024</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>A PD-Tech foi uma projeto de startup de tecnologia que surgiu da união entre alguns colegas e uma professora da minha turma após finalizarmos um projeto interdisciplinar. Eu era um dos integrantes da equipe do Front-end onde fui responsável por desenvolver sites, como por exemplo landpages e catálogo.</p>
+                    </div>
+
+                    <!-- Card experiência - Container Inter Período 3 -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Desenvolvedor Web Front-end</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Unibra</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Março de 2023 - Maio de 2023</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>No meu 3º período da faculdade teve o interdisciplinar e nele fui um dos integrantes da equipe de Desenvolvimento Web. A equipe desenvolveu uma aplicação para uma empresa que necessitava agilizar o cálculo de cada serviço encomendado pelo cliente (antes eles faziam todo o cálculo manualmente pelo  excel).</p>
+                    </div>
+
+                    <!-- Card experiência - Container Inter Período 2 -->
+                    <div class="card cardExperiencia">
+                        <!-- Card experiência - Título -->
+                        <h2>Engenheiro de Requisitos</h2>
+
+                        <!-- Card experiência - Subítulo -->
+                        <h3>Unibra</h3>
+
+                        <!-- Card experiência - Período -->
+                        <h4>Agosto de 2022 - Outubro de 2022</h4>
+
+                        <!-- Card experiência - Texto -->
+                        <p>No meu 2º período da faculdade teve o interdisciplinar e nele fiquei responsável em ser o líder da equipe de Engenharia de Requisitos. Como líder eu tive minha primeira experiência gerindo uma equipe e também sendo responsável em fazer a coleta dos requisitos e a documentação do projeto que minha turma viria desenvolver posteriormente.</p>
+                    </div>
                 </section>
             </div>
 
@@ -117,7 +207,7 @@
             <div id="certificados">
                 <h1>Certificados e Formação Acadêmica</h1>
 
-                <!-- Cards dos Certificados e Formações -->
+                <!-- Cards dos Certificados  -->
                 <section>
                     <!-- Formação - ADS -->
                     <!-- Container com o icon e linha vertical + card -->
