Adição da responsividade na main Experiência na Sobre
- Carrossel de Experiência concluído (HTML + CSS).

Obs 1: Falta fazer a funcionalidade do carrossel de Experiência.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -201,11 +201,22 @@
                         <p>No meu 2º período da faculdade teve o interdisciplinar e nele fiquei responsável em ser o líder da equipe de Engenharia de Requisitos. Como líder eu tive minha primeira experiência gerindo uma equipe e também sendo responsável em fazer a coleta dos requisitos e a documentação do projeto que minha turma viria desenvolver posteriormente.</p>
                     </div>
                 </section>
+
+                <!-- Carrossel - Container dos Botões -->
+                <div class="esconderCarrosselBotoes"> <!-- Serve apenas para ocultar a caixa dos botões -->
+                    <!-- Caixa com os botões do carrosel -->
+                    <div class="carrosselBotoes">
+                        <i class="bi bi-arrow-left-square-fill carrosselSetas"></i>
+                        <!-- Linha divisória dos botões -->
+                        <span></span>
+                        <i class="bi bi-arrow-right-square-fill carrosselSetas"></i>
+                    </div>
+                </div>
             </div>
 
             <!-- Certificados -->
             <div id="certificados">
-                <h1>Certificados e Formação Acadêmica</h1>
+                <h1>Certificados e Formação</h1>
 
                 <!-- Cards dos Certificados  -->
                 <section>
@@ -245,7 +256,7 @@
                         </div>
 
                         <!-- Card Certificados - Container Conferência Acadêmica -->
-                        <div class="card cardCertificados">
+                        <div class="card cardCertificados" id="cardConferencia">
                             <!-- Card Certificados - Título -->
                             <h2>III Conferência UB - Transformação Digital e Inovação: Convergência entre Comunicação, Gestão e Tecnologia</h2>
                             
