Adição da responsividade na main Certificados na Sobre
- Carrossel de Experiência concluído (HTML + CSS);
- Ajuste na Linha Vertical, agora ela fica na horizontal quando aparece o carrossel.

Obs 1: Falta fazer a funcionalidade do carrossel de Experiência e de Certificados.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -431,6 +431,17 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Carrossel - Container dos Botões -->
+                <div class="esconderCarrosselBotoes"> <!-- Serve apenas para ocultar a caixa dos botões -->
+                    <!-- Caixa com os botões do carrosel -->
+                    <div class="carrosselBotoes">
+                        <i class="bi bi-arrow-left-square-fill carrosselSetas"></i>
+                        <!-- Linha divisória dos botões -->
+                        <span></span>
+                        <i class="bi bi-arrow-right-square-fill carrosselSetas"></i>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
