--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
     <script src="../js/header.js" defer></script>
-    <script src="../js/sobre.js" defer></script>
+    <script src="../js/sobreCarrossel.js" defer></script>
+    <script src="../js/sobreLinhaVertical.js" defer></script>
 </head>
 <body>
     <header>
