Adição de link nos cards Certificados e alteração em algumas datas dos Certificados
- Antes era uma tag <span>, agora é uma tag <a>;
- Certificados que o mês de início é o mesmo que o término eu deixei apenas exibindo umas das datas para deixar mais limpo as informações do card, ou seja, se antes estava "maio de 2023 - maio de 2023" agora está apenas "maio de 2023".

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -265,10 +265,10 @@
                             <h3>UNIBRA - Centro Universitário Brasileiro</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Novembro de 2024 - Novembro de 2024</h4>
+                            <h4>Novembro de 2024</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://l1nk.dev/PV4XR" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -292,10 +292,10 @@
                             <h3>UNIBRA - Centro Universitário Brasileiro</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Novembro de 2024 - Novembro de 2024</h4>
+                            <h4>Novembro de 2024</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://encurtador.com.br/ZTkwz" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -319,10 +319,10 @@
                             <h3>Origamid</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Outubro de 2024 - Outubro de 2024</h4>
+                            <h4>Outubro de 2024</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://encurtador.com.br/02EGG" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -346,10 +346,10 @@
                             <h3>UNIBRA - Centro Universitário Brasileiro</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Setembro de 2024 - Setembro de 2024</h4>
+                            <h4>Setembro de 2024</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://encurtador.com.br/RpJem" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -373,10 +373,10 @@
                             <h3>UNIBRA - Centro Universitário Brasileiro</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Março de 2024 - Março de 2024</h4>
+                            <h4>Março de 2024</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://encurtador.com.br/JCqh3" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -403,7 +403,7 @@
                             <h4>Junho de 2023 - Agosto de 2023</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://encurtador.com.br/0u1Zl" target="_blank">Certificado</a>
                         </div>
                     </div>
 
@@ -416,19 +416,19 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                         </div>
 
-                        <!-- Card Certificados - Container UX Google     -->
+                        <!-- Card Certificados - Container Python     -->
                         <div class="card cardCertificados">
                             <!-- Card Certificados - Título -->
-                            <h2>Introdução à computação com Python</h2>
+                            <h2>Introdução à programação com Python</h2>
                             
                             <!-- Card Certificados - Local -->
                             <h3>UNIBRA - Centro Universitário Brasileiro</h3>
 
                             <!-- Card Certificados - Período -->
-                            <h4>Outubro de 2022 - Outubro de 2022</h4>
+                            <h4>Outubro de 2022</h4>
 
                             <!-- Card Certificados - Certificado -->
-                            <span>Certificado</span>
+                            <a href="https://l1nk.dev/WIRFw" target="_blank">Certificado</a>
                         </div>
                     </div>
                 </section>
