Adição de setas acima dos card e uma linha acima do último card, ambos em "Certfiicados e Formação"
- Essas setas e a linha ficam ao lado dos ícones e só aparecem em telas com width de até 1088px.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -228,8 +228,19 @@
                         <div class="icon_LinhaVertical">
                             <!-- Card Certificados - Icon -->
                             <i class="bi bi-mortarboard icon-certificado"></i>
+
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container ADS -->
@@ -254,6 +265,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container Conferência Acadêmica -->
@@ -281,6 +297,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container IA na Gestão -->
@@ -308,6 +329,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container Flexbox -->
@@ -335,6 +361,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container Excel -->
@@ -362,6 +393,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container UX Design na prática -->
@@ -389,6 +425,11 @@
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
                             <!-- Linha vertical -->
                             <div class="linhaVertical"></div>
+
+                            <!-- Ponta esquerda da seta -->
+                            <div class="setaLinha setaPontaEsquerda"></div>
+                            <!-- Ponta direita da seta -->
+                            <div class="setaLinha setaPontaDireita"></div>
                         </div>
 
                         <!-- Card Certificados - Container UX Google     -->
@@ -414,6 +455,12 @@
                         <div class="icon_LinhaVertical">
                             <!-- Card Certificados - Icon -->
                             <i class="bi bi-journal-bookmark icon-certificado"></i>
+
+                            <!-- Linha horizontal -->
+                            <div class="linhaHorizontalPython"></div>
+
+                            <!-- Linha vertical python -->
+                            <div class="linhaVerticalPython"></div>
                         </div>
 
                         <!-- Card Certificados - Container Python     -->
