Adição do footer na Sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -494,6 +494,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por Caio Montenegro</p>
+    </footer>
 </body>
 </html>
