Removi o target= "blank" dos links da nav de todas as páginas

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <!-- Lista dos itens de navegação da nav -->
                 <ul>
                     <li><a href="index.html" class="nav-pagAtual">Home</a></li>
-                    <li><a href="pages/projetos.html" target="_blank">Projetos</a></li>
-                    <li><a href="pages/sobre.html"    target="_blank">Sobre</a></li>
-                    <li><a href="pages/contato.html"  target="_blank">Contato</a></li>
+                    <li><a href="pages/projetos.html">Projetos</a></li>
+                    <li><a href="pages/sobre.html">Sobre</a></li>
+                    <li><a href="pages/contato.html">Contato</a></li>
                 </ul>
             </div>
         </nav>
