--- a/pages/contato.html
+++ b/pages/contato.html
@@ -31,9 +31,9 @@
                 <!-- Lista dos itens de navegação da nav -->
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="projetos.html" target="_blank">Projetos</a></li>
-                    <li><a href="sobre.html"    target="_blank">Sobre</a></li>
-                    <li><a href="contato.html"  target="_blank" class="nav-pagAtual">Contato</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html" class="nav-pagAtual">Contato</a></li>
                 </ul>
             </div>
         </nav>
