--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -33,9 +33,9 @@
                 <!-- Lista dos itens de navegação da nav -->
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="projetos.html" target="_blank" class="nav-pagAtual">Projetos</a></li>
-                    <li><a href="sobre.html"    target="_blank">Sobre</a></li>
-                    <li><a href="contato.html"  target="_blank">Contato</a></li>
+                    <li><a href="projetos.html" class="nav-pagAtual">Projetos</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html" >Contato</a></li>
                 </ul>
             </div>
         </nav>
