--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -34,9 +34,9 @@
                 <!-- Lista dos itens de navegação da nav -->
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="projetos.html" target="_blank">Projetos</a></li>
-                    <li><a href="sobre.html"    target="_blank" class="nav-pagAtual">Sobre</a></li>
-                    <li><a href="contato.html"  target="_blank">Contato</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="sobre.html" class="nav-pagAtual">Sobre</a></li>
+                    <li><a href="contato.html" >Contato</a></li>
                 </ul>
             </div>
         </nav>
