Troquei onde fica a estilização dos botões do carrossel
- Troquei onde fica a estilização dos botões do carrosséis, coloquei no base.css.

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -81,13 +81,13 @@
             </div>
 
             <!-- Carrossel - Container dos Botões -->
-            <div class="carrosselProjMaior"> <!-- Serve apenas para ocultar a caixa dos botões -->
+            <div class="esconderCarrosselBotoes"> <!-- Serve apenas para ocultar a caixa dos botões -->
                 <!-- Caixa com os botões do carrosel -->
                 <div class="carrosselBotoes">
-                    <i class="bi bi-arrow-left-square-fill setas"></i>
+                    <i class="bi bi-arrow-left-square-fill carrosselSetas"></i>
                     <!-- Linha divisória dos botões -->
                     <span></span>
-                    <i class="bi bi-arrow-right-square-fill setas"></i>
+                    <i class="bi bi-arrow-right-square-fill carrosselSetas"></i>
                 </div>
             </div>
 
@@ -376,13 +376,13 @@
             </div>
 
             <!-- Carrossel - Container dos Botões -->
-            <div class="carrosselProjMaior"> <!-- Serve apenas para ocultar a caixa dos botões -->
+            <div class="esconderCarrosselBotoes"> <!-- Serve apenas para ocultar a caixa dos botões -->
                 <!-- Caixa com os botões do carrosel -->
                 <div class="carrosselBotoes">
-                    <i class="bi bi-arrow-left-square-fill setas"></i>
+                    <i class="bi bi-arrow-left-square-fill carrosselSetas"></i>
                     <!-- Linha divisória dos botões -->
                     <span></span>
-                    <i class="bi bi-arrow-right-square-fill setas"></i>
+                    <i class="bi bi-arrow-right-square-fill carrosselSetas"></i>
                 </div>
             </div>
 
