Criação da main redes sociais de Contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -89,7 +89,32 @@
         </section>
 
         <!-- Redes Sociais -->
-        <section></section>
+        <section>
+            <!-- Título da secion -->
+            <h1>Entre em contato!</h1>
+            
+            <!-- Paragrafo da secion -->
+            <p>Encontre-me também nas seguintes redes sociais:</p>
+
+            <!-- Container com o ícones das redes sociais -->
+            <div class="containerIcons">
+                <!-- Rede social - Github -->
+                <a href="https://github.com/CaioMBM" target="_blank" class="contentIcon">
+                    <i class="bi bi-github"></i>
+                    <span>Github</span>
+                </a>
+                <!-- Rede social - Linkedin -->
+                <a href="https://www.linkedin.com/in/caio-montenegro-486571250/" target="_blank" class="contentIcon">
+                    <i class="bi bi-linkedin"></i>
+                    <span>Linkedin</span>
+                </a>
+                <!-- Rede social - Instagram -->
+                <a href="https://www.instagram.com/ccaiokj" target="_blank" class="contentIcon">
+                    <i class="bi bi-instagram"></i>
+                    <span>Instagram</span>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
