Adição da API para enviar e-mail em Contato
- Usei a API do FormSubmit.

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -50,7 +50,7 @@
             <p>Preencha o formulário abaixo e entre em contato comigo para tirar dúvidas ou para fazer alguma proposta de projeto.</p>
 
             <!-- Formulário de contato -->
-            <form action="#">
+            <form action="https://formsubmit.co/caiombmonteiro@gmail.com" method="POST">
                 <!-- Nome + Email -->
                 <div id="Nome_Email">
                     <!-- Nome -->
