Adição da responsividade na main em Contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -91,7 +91,7 @@
         <!-- Redes Sociais -->
         <section>
             <!-- Título da secion -->
-            <h1>Entre em contato!</h1>
+            <h1>Redes Sociais</h1>
             
             <!-- Paragrafo da secion -->
             <p>Encontre-me também nas seguintes redes sociais:</p>
