Adição do footer em Contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -84,7 +84,7 @@
                 <i class="bi bi-envelope-fill"></i>
 
                 <!-- Parágrado -->
-                <p>caiombmonteiro@gmail.com</p>
+                <span>caiombmonteiro@gmail.com</span>
             </div>
         </section>
 
@@ -117,6 +117,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por Caio Montenegro</p>
+    </footer>
 </body>
 </html>
