Adição do _next no form em Contato
- Adicionar no form em Contato, o _next do FormSubmit para redirecionar o usuário para emailEnviado.html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -74,6 +74,8 @@
                 <label for="ipt-mensagem">Mensagem</label>
                 <textarea type="text" name="mensagem" id="ipt-mensagem" rows="5" placeholder="Fale o que queira..." required></textarea>
                 
+                <!-- Ao enviar o e-mail o usuário será redirecionado para a página emailEnviado.html -->
+                <input type="hidden" name="_next" value="emailEnviado.html">
 
                 <button type="submit">Enviar</button>
             </form>
