--- a/pages/emailEnviado.html
+++ b/pages/emailEnviado.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
     <script src="../js/header.js" defer></script>
+    <script src="../js/contatoRedirecionar.js" defer></script>
 </head>
 <body>
 
