Adição de animação na main de Sobre
- Usei a biblioteca css "Animate.css" nos <h1>.

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,6 +9,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/sobre.css">
+    <!-- CSS - Animações -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
@@ -47,13 +49,13 @@
         <section id="SobreTec">
             <!-- Sobre Mim-->
             <div id="sobreMim">
-                <h1>Sobre Mim</h1>
+                <h1 class="animate__animated animate__bounceInDown">Sobre Mim</h1>
                 <p>Eu sou Caio Montenegro, tenho 21 anos, sou de Recife-PE (onde também moro) e terminei a faculdade de Tecnólogo em Análise e Desenvolvimento de Sistemas no final de 2024. Minha jornada como desenvolvedor web front-end no primeiro semestre de 2023 e desde então venho estudando e procurando descobrir mais sobre como montar protótipos e transformar protótipos em código.</p>
             </div>
 
             <!-- Tecnologias e Ferramentas -->
             <div id="TecsFerramentas">
-                <h1>Tecnologias e Ferramentas</h1>
+                <h1 class="animate__animated animate__bounceInDown">Tecnologias e Ferramentas</h1>
 
                 <!-- Container com os icos -->
                 <div class="containerIconsTecs">
@@ -93,7 +95,7 @@
         <section id="ExperienciaCertificados">
             <!-- Experiência -->
             <div id="Experiencia">
-                <h1>Experiência</h1>
+                <h1 class="animate__animated animate__bounceInLeft">Experiência</h1>
 
                 <!-- Cards da experiência -->
                 <section>
@@ -217,7 +219,7 @@
 
             <!-- Certificados -->
             <div id="certificados">
-                <h1>Certificados e Formação</h1>
+                <h1 class="animate__animated animate__bounceInRight">Certificados e Formação</h1>
 
                 <!-- Cards dos Certificados  -->
                 <section>
