Adição de uma animação nos botões da main na Home
- Animação será acionado quando passar o mouse pelo botão;
- Usei a biblioteca "Animista".

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
             <!-- Container dos botões -->
             <div>
-                <a href="pages/projetos.html"   target="_blank"><button class="buttonsMainHome">Projetos</button></a>
-                <a href="pages/sobre.html"   target="_blank"><button class="buttonsMainHome">Sobre</button></a>
-                <a href="pages/contato.html" target="_blank"><button class="buttonsMainHome">Contato</button></a>
+                <a href="pages/projetos.html" target="_blank"><button>Projetos</button></a>
+                <a href="pages/sobre.html" target="_blank"><button>Sobre</button></a>
+                <a href="pages/contato.html" target="_blank"><button>Contato</button></a>
             </div>
         </section>
 
