Adição de animação na main em Contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,6 +9,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/contato.css">
+    <!-- CSS - Animações -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
@@ -44,10 +46,10 @@
         <!-- Contato -->
         <section>
             <!-- Título da secion -->
-            <h1>Entre em contato!</h1>
+            <h1 class="animate__animated animate__bounceInDown">Entre em contato!</h1>
             
             <!-- Paragrafo da secion -->
-            <p>Preencha o formulário abaixo e entre em contato comigo para tirar dúvidas ou para fazer alguma proposta de projeto.</p>
+            <p class="animate__animated animate__bounceInLeft">Preencha o formulário abaixo e entre em contato comigo para tirar dúvidas ou para fazer alguma proposta de projeto.</p>
 
             <!-- Formulário de contato -->
             <form action="https://formsubmit.co/caiombmonteiro@gmail.com" method="POST">
@@ -81,7 +83,7 @@
             </form>
 
             <!-- E-mail de contato -->
-            <div>
+            <div class="animate__animated animate__bounceInLeft">
                 <!-- Ícone -->
                 <i class="bi bi-envelope-fill"></i>
 
@@ -93,10 +95,10 @@
         <!-- Redes Sociais -->
         <section>
             <!-- Título da secion -->
-            <h1>Redes Sociais</h1>
+            <h1 class="animate__animated animate__bounceInDown">Redes Sociais</h1>
             
             <!-- Paragrafo da secion -->
-            <p>Encontre-me também nas seguintes redes sociais:</p>
+            <p class="animate__animated animate__bounceInLeft">Encontre-me também nas seguintes redes sociais:</p>
 
             <!-- Container com o ícones das redes sociais -->
             <div class="containerIcons">
